# tinyVPN

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  prd.md
crates/ccs/: Cargo.toml
crates/ccs/src/: main.rs  registry.rs  server.rs  web.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  lib.rs  protocol.rs  tls.rs  wg.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: lib.rs  puncher.rs  stun.rs
crates/relay/: Cargo.toml
crates/relay/src/: lib.rs  main.rs
docs/: deployment.md  nat-traversal.md  user-guide.md
docs/superpowers/plans/: 2026-06-01-fix-known-defects.md  2026-06-01-mvp.md  2026-06-18-relay-only.md
docs/superpowers/specs/: 2026-06-01-fix-known-defects-design.md  2026-06-01-mvp-design.md  2026-06-01-quic-transport-design.md  2026-06-18-relay-only-design.md
scripts/: deploy-client.sh  deploy-server.sh  start-ccs.sh  stop-all.sh
