[workspace]
members = [
    "crates/core",
    "crates/ccs",
    "crates/p2p",
    "crates/relay",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/tinyvpn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"

# Networking
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Web
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Internal crates
tinyvpn-core = { path = "crates/core" }
tinyvpn-p2p = { path = "crates/p2p" }
