[package]
name = "tinyvpn-ccs"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tinyvpn-core = { workspace = true }
